# rest-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  rustfmt.toml
.github/: credentials.yml
.github/docker/: .dockerignore  compose.yml
.github/workflows/: ci.yml
src/: errors.rs  lib.rs  server.rs
src/api/: management.rs  users.rs
src/db/: resources.rs  rest.rs  schema.sql  types.rs  utils.rs
tests/: tests.rs
