[[bin]]
name = "server"
path = "src/server.rs"

[package]
name = "rest-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net"] }
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"

[dev-dependencies]
httpc-test = "0.1.10"

[profile.test]
inherits = "release"
